--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,11 @@ black==20.8b1
 certifi==2020.12.5
 chardet==4.0.0
 click==7.1.2
+Flask==1.1.2
 idna==2.10
+itsdangerous==1.1.0
+Jinja2==2.11.3
+MarkupSafe==1.1.1
 mypy-extensions==0.4.3
 pathspec==0.8.1
 python-dateutil==2.8.1
@@ -16,3 +20,4 @@ toml==0.10.2
 typed-ast==1.4.3
 typing-extensions==3.7.4.3
 urllib3==1.26.3
+Werkzeug==1.0.1
