--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ black==20.8b1
 certifi==2020.12.5
 chardet==4.0.0
 click==7.1.2
+decorator==5.0.7
 Flask==1.1.2
 idna==2.10
 itsdangerous==1.1.0
@@ -20,4 +21,5 @@ toml==0.10.2
 typed-ast==1.4.3
 typing-extensions==3.7.4.3
 urllib3==1.26.3
+validators==0.18.2
 Werkzeug==1.0.1
