--- a/installserver/requirements.txt
+++ b/installserver/requirements.txt
@@ -1,16 +1,22 @@
 appdirs==1.4.4
-black==20.8b1
+astroid==2.5.6
+black==21.5b0
 certifi==2020.12.5
 chardet==4.0.0
 click==7.1.2
 decorator==5.0.7
 Flask==1.1.2
 idna==2.10
+isort==5.8.0
 itsdangerous==1.1.0
 Jinja2==2.11.3
+lazy-object-proxy==1.6.0
 MarkupSafe==1.1.1
+mccabe==0.6.1
 mypy-extensions==0.4.3
 pathspec==0.8.1
+PyJWT==1.7.1
+pylint==2.8.2
 python-dateutil==2.8.1
 pytz==2021.1
 regex==2021.4.4
@@ -18,8 +24,10 @@ requests==2.25.1
 six==1.15.0
 slack-sdk==3.3.0
 toml==0.10.2
+twilio==6.58.0
 typed-ast==1.4.3
 typing-extensions==3.7.4.3
 urllib3==1.26.3
 validators==0.18.2
 Werkzeug==1.0.1
+wrapt==1.12.1
